tests/cases/errors/parser/stmt_for2.vnm
fn main() {
  let x = 10;
  for (y = 0; y < x; y += 1) {
    print x;
  }
  return 0;
}

main();
